Fixes #85 - content alignment

--- a/app/assets/stylesheets/layouts.scss
+++ b/app/assets/stylesheets/layouts.scss
@@ -7,7 +7,7 @@ body {
 #content {
     background-color: white;
     border: 1px solid $border-color;
-    padding: 1em;
+    padding: 1em 2em;
 }
 
 .full-top-bar {
